完成管理员页面测试

--- a/templates/main/about_old.html
+++ b/templates/main/about_old.html
@@ -28,8 +28,8 @@
         </div>
         <div class="nav-content container">
             <ul class="tabs tabs-transparent">
-                <li class="tab"><a target="_blank" href="index.html">首页</a></li>
-                <li class="tab"><a target="_blank" href="tag.html">标签</a></li>
+                <li class="tab"><a target="_blank" href="index_old.html">首页</a></li>
+                <li class="tab"><a target="_blank" href="tag_old.html">标签</a></li>
                 <li class="tab"><a target="_blank" href="#">归档</a></li>
                 <li class="tab"><a href="#" class="active">关于</a></li>
             </ul>
