--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <title>主页-Kindem的博客</title>
+{% extends 'base.html' %}
+{% load staticfiles %}
 
-    <!--Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+{% block additional-css %}
+    <link href="{% static 'main/css/index.css' %}" rel="stylesheet">
+{% endblock %}
 
-    <!--Materialize-->
-    <link href="lib/materialize/css/materialize.min.css" rel="stylesheet" media="screen,projection">
-
-    <!--Index Css-->
-    <link href="css/index.css" rel="stylesheet">
-</head>
-<body>
-    <!--导航栏-->
+{% block navbar %}
     <nav class="nav-extended cyan">
         <div class="nav-wrapper container">
             <a href="#" class="brand-logo">Kindem</a>
@@ -30,23 +21,25 @@
 
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a href="#" class="active">首页</a></li>
-                <li class="tab"><a target="_blank" href="tag.html">标签</a></li>
+                <li class="tab"><a target="_blank" href="tag_old.html">标签</a></li>
                 <li class="tab"><a target="_blank" href="#">归档</a></li>
-                <li class="tab"><a target="_blank" href="about.html">关于</a></li>
+                <li class="tab"><a target="_blank" href="about_old.html">关于</a></li>
             </ul>
         </div>
     </nav>
+{% endblock %}
 
-    <!--parallax-->
+{% block parallax %}
     <div class="parallax-container">
-        <div class="parallax"><img src="img/index_bg.jpg"></div>
+        <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}"></div>
         <div class="center white-text">
             <br><br><br><br><br><br><br>
             <h2>一生想做烂漫 Coder</h2>
         </div>
     </div>
+{% endblock %}
 
-    <!--主容器-->
+{% block main %}
     <div class="section teal lighten-5">
         <div class="row">
             <div class="container">
@@ -55,7 +48,7 @@
                     <div class="col s12 m12 l6 xl6">
                         <div class="card medium z-depth-3 hoverable">
                             <div class="card-image">
-                                <img src="img/test1.png">
+                                <img src="{% static 'main/img/test1.png' %}">
                                 <span class="card-title">Facker被Bang演了!!</span>
                             </div>
                             <div class="card-content">
@@ -71,7 +64,7 @@
                     <div class="col s12 m12 l6 xl6">
                         <div class="card medium z-depth-3 hoverable">
                             <div class="card-image">
-                                <img src="img/test1.png">
+                                <img src="{% static 'main/img/test1.png' %}">
                                 <span class="card-title">Facker被Bang演了!!</span>
                             </div>
                             <div class="card-content">
@@ -89,7 +82,7 @@
                     <div class="col s12 m12 l6 xl6">
                         <div class="card medium z-depth-3 hoverable">
                             <div class="card-image">
-                                <img src="img/test1.png">
+                                <img src="{% static 'main/img/test1.png' %}">
                                 <span class="card-title">Facker被Bang演了!!</span>
                             </div>
                             <div class="card-content">
@@ -105,7 +98,7 @@
                     <div class="col s12 m12 l6 xl6">
                         <div class="card medium z-depth-3 hoverable">
                             <div class="card-image">
-                                <img src="img/test1.png">
+                                <img src="{% static 'main/img/test1.png' %}">
                                 <span class="card-title">Facker被Bang演了!!</span>
                             </div>
                             <div class="card-content">
@@ -130,63 +123,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
 
-    <!--Action Button-->
-    <div class="fixed-action-btn">
-        <a class="btn-floating btn-large red">
-            <i class="material-icons">add</i>
-        </a>
-        <ul>
-            <li><a class="btn-floating green"><i class="material-icons">share</i></a></li>
-            <li><a class="btn-floating yellow darken-1"><i class="material-icons">mail</i></a></li>
-            <li><a class="btn-floating blue"><i class="material-icons">bug_report</i></a></li>
-        </ul>
-    </div>
-
-    <!--Donate Modal-->
-    <div class="modal" id="donate-modal">
-        <div class="modal-content">
-            <h5 class="center">使用支付宝请我喝咖啡</h5>
-            <img src="img/donate.jpg" width="284px" height="387px" class="center-block">
-        </div>
-    </div>
-
-    <!--页脚-->
-    <footer class="page-footer cyan">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m12 l4 xl4">
-                    <h4>Contact Me With</h4>
-                    <p>QQ: 461425614<br>邮箱: 461425614@qq.com</p>
-                    <br>
-                </div>
-                <div class="col s12 m12 l4 xl4">
-                    <h5>More</h5>
-                    <ul>
-                        <li><a href="#" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
-                        <li><a href="https://www.zhihu.com/people/wang-yu-zhi-ku-66/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
-                        <li><a href="https://user.qzone.qq.com/461425614/infocenter" class="white-text">QZone&nbsp;-&nbsp;可见影子</a></li>
-                    </ul>
-                </div>
-                <div class="col s12 m12 l4 xl4">
-                    <h5>Donate</h5>
-                    <button type="button" class="btn cyan lighten-2 waves-effect donate-modal-trigger">请我喝一杯咖啡</button>
-                </div>
-            </div>
-        </div>
-        <div class="footer-copyright">
-            <div class="container">@ 2017 Copyright kindemh.cn<br>
-                Frontend Framework By <a href="http://materializecss.com/about.html" class="white-text">Materialize</a></div>
-        </div>
-    </footer>
-
-    <!--jQuery-->
-    <script src="lib/jQuery/jquery-3.2.1.min.js"></script>
-
-    <!--Materialize-->
-    <script src="lib/materialize/js/materialize.min.js"></script>
-
-    <!--Index Js-->
-    <script src="js/index.js"></script>
-</body>
-</html>
+{% block additional-js %}
+    <script src="{% static 'main/js/index.js' %}"></script>
+{% endblock %}
