--- a/templates/main/archive_old.html
+++ b/templates/main/archive_old.html
@@ -29,10 +29,10 @@
         <div class="nav-content container">
 
             <ul class="tabs tabs-transparent">
-                <li class="tab"><a target="_blank" href="index.html">首页</a></li>
-                <li class="tab"><a target="_blank" href="tag.html">标签</a></li>
+                <li class="tab"><a target="_blank" href="index_old.html">首页</a></li>
+                <li class="tab"><a target="_blank" href="tag_old.html">标签</a></li>
                 <li class="tab"><a href="#" class="active">归档</a></li>
-                <li class="tab"><a target="_blank" href="about.html">关于</a></li>
+                <li class="tab"><a target="_blank" href="about_old.html">关于</a></li>
             </ul>
         </div>
     </nav>
