准备用JS自己手撸一遍，Django模板太辣鸡了

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -86,17 +86,17 @@
             <div class="col s12 m12 l12 xl12">
                 <div class="row center">
                     <ul class="pagination">
-                        {% if is_first_page %}
-                            <li class="disabled"><a><i class="material-icons">chevron_left</i></a></li>
-                        {% else %}
-                            <li class="waves-effect"><a href="index.html?page={{ pre_page }}"><i class="material-icons">chevron_left</i></a></li>
-                        {% endif %}
-
-                        {% if is_last_page %}
-                            <li class="disabled"><a><i class="material-icons">chevron_right</i></a></li>
-                        {% else %}
-                            <li class="waves-effect"><a href="index.html?page={{ next_page }}"><i class="material-icons">chevron_right</i></a></li>
-                        {% endif %}
+{#                        {% if is_first_page %}#}
+{#                            <li class="disabled"><a><i class="material-icons">chevron_left</i></a></li>#}
+{#                        {% else %}#}
+{#                            <li class="waves-effect"><a href="index.html?page={{ pre_page }}"><i class="material-icons">chevron_left</i></a></li>#}
+{#                        {% endif %}#}
+{##}
+{#                        {% if is_last_page %}#}
+{#                            <li class="disabled"><a><i class="material-icons">chevron_right</i></a></li>#}
+{#                        {% else %}#}
+{#                            <li class="waves-effect"><a href="index.html?page={{ next_page }}"><i class="material-icons">chevron_right</i></a></li>#}
+{#                        {% endif %}#}
                     </ul>
                 </div>
             </div>
