--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -28,7 +28,7 @@
         <div class="container display-none" id="post-container">
             <br>
             <div class="row">
-                <div class="col s12 m12 l10 offset-l1 xl10 offset-xl1">
+                <div class="col s12 m12 l10 offset-l1 xl10 offset-xl1 main">
                     <h2>码农怎样追喜欢的女孩？</h2>
                     <div class="row">
                         &nbsp;&nbsp;&nbsp;<a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom" data-delay="50" data-tooltip="2017年11月10日 12:17">发表时间: 7小时前</a>
