修复了主页分页器的小bug

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -80,8 +80,17 @@
             <div class="col s12 m12 l12 xl12">
                 <div class="row center">
                     <ul class="pagination">
-                        <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-                        <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
+                        {% if is_first_page %}
+                            <li class="disabled"><a><i class="material-icons">chevron_left</i></a></li>
+                        {% else %}
+                            <li class="waves-effect"><a href="/{{ pre_page }}"><i class="material-icons">chevron_left</i></a></li>
+                        {% endif %}
+
+                        {% if is_last_page %}
+                            <li class="disabled"><a><i class="material-icons">chevron_right</i></a></li>
+                        {% else %}
+                            <li class="waves-effect"><a href="/{{ next_page }}"><i class="material-icons">chevron_right</i></a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
