优化移动支持

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
     <!--Materialize-->
     <link href="{% static 'main/lib/materialize/css/materialize.min.css' %}" rel="stylesheet" media="screen,projection">
 
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     {# 附加css块 #}
     {% block additional-css %}
     {% endblock %}
