修改字体，压缩图片

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
     <div class="modal" id="donate-modal">
         <div class="modal-content">
             <h5 class="center">使用支付宝请我喝咖啡</h5>
-            <img src="{% static 'main/img/donate.jpg' %}" width="284px" height="387px" class="center-block">
+            <img src="{% static 'main/img/hd/donate.jpg' %}" width="284px" height="387px" class="center-block">
         </div>
     </div>
 
