--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -30,7 +30,7 @@
 
 {% block parallax %}
     <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'main/img/about_bg.png' %}"></div>
+        <div class="parallax"><img src="{% static 'main/img/hd/about_bg.png' %}"></div>
         <div class="center white-text">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <h3>Kindem</h3>
