--- a/main/static/main/css/archive.css
+++ b/main/static/main/css/archive.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: "Microsoft YaHei UI Light", monospace;
+    font-family: "Microsoft YaHei UI Light";
 }
 
 .dark-text {
