--- a/main/static/main/css/post.css
+++ b/main/static/main/css/post.css
@@ -23,5 +23,5 @@ h4, h5, h6 {
 }
 
 body {
-    font-family: "Microsoft YaHei UI Light", monospace;
+    font-family: "Microsoft YaHei UI Light";
 }
