完成详情页面，自我感觉还行

--- a/main/static/main/css/archive.css
+++ b/main/static/main/css/archive.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: "Microsoft YaHei UI Light";
+    font-family: "Microsoft YaHei UI Light", monospace;
 }
 
 .dark-text {
