--- a/main/static/main/css/tag.css
+++ b/main/static/main/css/tag.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Microsoft YaHei UI Light";
+    font-family: "Microsoft YaHei UI Light", monospace;
 }
 
 .parallax-container {
