--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -25,49 +25,45 @@
 
 {% block main %}
     <div class="section teal lighten-5">
-        <div class="container display-none" id="post-container">
+        <div class="container" id="post-container">
             <br>
             <div class="row">
                 <div class="col s12 m12 l10 offset-l1 xl10 offset-xl1 main">
-                    <h2>码农怎样追喜欢的女孩？</h2>
-                    <div class="row">
-                        &nbsp;&nbsp;&nbsp;<a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom" data-delay="50" data-tooltip="2017年11月10日 12:17">发表时间: 7小时前</a>
+                    <h2 class="center">{{ post.title }}</h2>
+                    <div class="row center">
+                        {% if phase_days_created == 0 %}
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom"data-delay="50"
+                               data-tooltip="{{ post.created_time }}">{{ phase_hours_created }} 小时前</a>
+                        {% else %}
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom" data-delay="50"
+                               data-tooltip="{{ post.created_time }}">
+                                {{ phase_days_created }} 天{{ phase_hours_created }} 小时前</a>
+                        {% endif %}
                         &nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;<a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom" data-delay="50" data-tooltip="2017年11月10日 12:17">最后修改: 7小时前</a>
+                        {% if phase_days_modified == 0 %}
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom" data-delay="50"
+                               data-tooltip="{{ post.modified_time }}">{{ phase_hours_modified }} 小时前</a>
+                        {% else %}
+                            &nbsp;&nbsp;&nbsp;
+                            <a href="#" class="grey-text lighten-3 tooltipped" data-position="bottom" data-delay="50"
+                               data-tooltip="{{ post.modified_time }}">
+                                {{ phase_days_modified }} 天{{ phase_hours_modified }} 小时前</a>
+                        {% endif %}
                     </div>
-                    <div class="row">
+                    <div class="row center">
                         &nbsp;
-                        <a href="#"><div class="chip hoverable z-depth-1">&nbsp;&nbsp;程序猿&nbsp;&nbsp;</div></a>
-                        <a href="#"><div class="chip hoverable z-depth-1">&nbsp;&nbsp;情感&nbsp;&nbsp;</div></a>
-                        <a href="#"><div class="chip hoverable z-depth-1">&nbsp;&nbsp;生活&nbsp;&nbsp;</div></a>
-                        <a href="#"><div class="chip hoverable z-depth-1">&nbsp;&nbsp;日志&nbsp;&nbsp;</div></a>
+                        {% for tag_obj in post.tags.all %}
+                            <a href="#"><div class="chip hoverable z-depth-1">&nbsp;&nbsp;{{ tag_obj.name }}&nbsp;&nbsp;</div></a>
+                        {% endfor %}
                     </div>
                     <div class="row">
                         <div class="col s12 m12 l12 xl12">
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
-                            <p>
-                                有一天，我路上看到了个心动的女生，很心动那种，我犹豫了很久要不要去搭讪。最后心动战胜了搭讪焦虑，我鼓足了勇气，硬着头皮走过去搭讪，跟她说我想认识她，想加她微信，我被拒绝了。只记得我当时觉得很尴尬，脸火辣辣的，感觉身边所有的人都在嘲笑我，恨不得地上能有个裂缝能让我钻进去。
-                            </p>
+                            {% autoescape off %}
+                                {{ post.body }}
+                            {% endautoescape %}
                         </div>
                     </div>
                     <br>
