修复小宽度手机无法查看时间的bug

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -53,8 +53,8 @@
                                     <p>{{ post.excerpt }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/post/{{ post.pk }}">阅读全文</a>
-                                    <a href="#">分享文章</a>
+                                    <a href="/post/{{ post.pk }}">全文</a>
+                                    <a href="#">分享</a>
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
                             </div>
