--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -14,7 +14,7 @@
                 <li><a href="#"><i class="material-icons hide-on-med-and-down">person</i></a></li>
             </ul>
             <ul class="left">
-                <li><a href="#"><i class="material-icons">arrow_back</i></a></li>
+                <li><a><i class="material-icons go-back">arrow_back</i></a></li>
             </ul>
         </div>
     </nav>
