--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -21,7 +21,6 @@
 
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a href="/" class="active">首页</a></li>
-                <li class="tab"><a target="_blank" href="tag_old.html">标签</a></li>
                 <li class="tab"><a target="_blank" href="#">归档</a></li>
                 <li class="tab"><a target="_blank" href="/about">关于</a></li>
             </ul>
@@ -68,8 +67,8 @@
                                     <p>{{ post.excerpt }}</p>
                                 </div>
                                 <div class="card-action">
-                                    <a href="/post/{{ post.pk }}">阅读全文</a>
-                                    <a href="#">分享文章</a>
+                                    <a href="/post/{{ post.pk }}">全文</a>
+                                    <a href="#">分享</a>
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
                             </div>
